vlib/v/checker/tests/match_expr_else.out
vlib/v/checker/tests/match_expr_else.vv:5:6: error: match must be exhaustive (add match branches for: `f64` or `else {}` at the end)
    3 | fn main() {
    4 |     x := AA('test')
    5 |     _ = match x {
      |         ~~~~~~~~~
    6 |         int {
    7 |             'int'
vlib/v/checker/tests/match_expr_else.vv:23:3: error: match expression is exhaustive, `else` is unnecessary
   21 |             'f64'
   22 |         }
   23 |         else {
      |         ~~~~
   24 |             'else'
   25 |         }
vlib/v/checker/tests/match_expr_else.vv:34:3: error: `else` must be the last branch of `match`
   32 |             'string'
   33 |         }
   34 |         else {
      |         ~~~~
   35 |             'else'
   36 |         }
